[gd_scene load_steps=3 format=3 uid="uid://d1awp8vrnet6x"]

[ext_resource type="Script" uid="uid://dtuo8i4mt5llq" path="res://scripts/hint.gd" id="1_lsscw"]
[ext_resource type="Texture2D" uid="uid://c6q45dt8u7rht" path="res://images/2_answer.png" id="2_grpcu"]

[node name="Hint" type="Node2D"]
script = ExtResource("1_lsscw")

[node name="Bg" type="ColorRect" parent="."]
offset_left = 67.0
offset_top = 35.0
offset_right = 1075.0
offset_bottom = 270.0
color = Color(0.83033526, 0.8303351, 0.8303353, 1)

[node name="HideHint" type="Button" parent="." groups=["Buttons"]]
offset_left = 988.0
offset_top = 50.0
offset_right = 1052.0
offset_bottom = 120.0
text = "x"

[node name="Label" type="Label" parent="."]
offset_left = 545.0
offset_top = 79.0
offset_right = 585.0
offset_bottom = 102.0
text = "Hint"

[node name="ActualHint" type="Label" parent="."]
offset_left = 142.0
offset_top = 119.0
offset_right = 974.0
offset_bottom = 213.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "hint itn"
autowrap_mode = 2

[node name="2Answer" type="Sprite2D" parent="."]
position = Vector2(572, 289)
scale = Vector2(0.7213394, 0.66569203)
texture = ExtResource("2_grpcu")

[connection signal="pressed" from="HideHint" to="." method="_on_hide_hint_pressed"]
